objects/CusRep_Column__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alignment__c</fullName>
        <label>Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CusRep_Settings__c</fullName>
        <label>CusRep_Settings</label>
        <referenceTo>CusRep_Settings__c</referenceTo>
        <relationshipLabel>CusRep_Columns</relationshipLabel>
        <relationshipName>CusRep_Columns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Link_To_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Link To Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owner_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Owner Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CusRep_Column</label>
    <nameField>
        <displayFormat>CRC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CusRep_Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>